# orderbook

./: Cargo.toml
api/: Cargo.toml
api/src/: error.rs  main.rs
api/src/auth/: admin.rs  login.rs  register.rs
api/src/market/: create_market.rs  delete_market.rs  mod.rs  pause_market.rs
api/src/middleware/: jwt.rs  user.rs
api/src/order/: cancel_order.rs  create_order.rs  get_all_orders.rs  get_all_orders_for_market.rs  mod.rs  place_order.rs
api/src/user/: get_balance.rs  get_profile.rs  login.rs  mod.rs  register.rs
engine/: Cargo.toml
engine/src/: engine.rs  error.rs  main.rs  market_task.rs  messages.rs
engine/src/book/: book.rs  message.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs
shared/src/engine/: event.rs  messages.rs  mod.rs  order.rs
shared/src/error/: book.rs
shared/src/kafka/: consumer.rs  producer.rs
shared/src/user_service/: error.rs  incoming.rs  outgoing.rs
user-service/: .env  Cargo.toml
user-service/src/: main.rs
user-service/src/db/: pool.rs
user-service/src/routes/: deduct_request.rs  lock_request.rs  mod.rs  unlock_request.rs
user-service/src/state/: user.rs
