[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = "0.12.6"
chrono = { version = "0.4.45", features = ["serde"] }
rust_decimal = { version = "1.42.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = "0.7.0"
uuid = { version = "1.23.3", features = ["serde", "v4"] }
shared = {path = "../shared"}
jsonwebtoken = "10.4.0"
redis = { package = "redis", version = "0.25", features = ["tokio-comp", "aio"] }
futures = "0.3"
serde_json = "1.0.150"
