[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
rust_decimal = { version = "1.42.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.3", features = ["v4"] }
shared ={ path = "../shared"}
tokio = { version = "1.52.3", features = ["full"] }
redis = { version = "1.2.4", features = ["aio", "tokio-comp"] }
