    [package]
    name = "shared"
    version = "0.1.0"
    edition = "2024"

    [dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
    rust_decimal = "1.42.0"
    serde = { version = "1.0.228", features = ["derive"] }
    uuid = { version = "1.23.3", features = ["serde", "v4"] }
