    [package]
    name = "shared"
    version = "0.1.0"
    edition = "2024"

    [dependencies]
    axum = "0.8.9"
    chrono = { version = "0.4.45", features = ["serde"] }
    rdkafka = "0.39.0"
    rust_decimal ={version ="1.42.0",  features = ["macros"]}
    serde = { version = "1.0.228", features = ["derive"] }
    serde_json = "1.0.150"
    uuid = { version = "1.23.3", features = ["serde", "v4"] }
