[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
rust_decimal = { version = "1.42.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
shared = { path = "../shared" }
